[tool.poetry]
name = "exposure"
description = "tool for compute with exposure settings and metrics for cameras"
version = "0.1.1"
authors = ["Marc Rijken <marc@rijken.org>"]
license = "MIT"
repository = "https://github.com/mrijken/exposure"
readme = "README.md"
packages = [{ include = "exposure" }]
[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = ">=2.10.1"
mypy = ">=0.790"
ruff = "^0.1.9"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules --doctest-glob=\"*.md\""
testpaths = ["."]

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 120
select = ["ALL"]
ignore = ["D", "ANN102", "ANN101", "EM102", "TCH", "TRY003", "EM", "FBT"]

[tool.ruff.per-file-ignores]
"tests/**" = ["S101", "INP", "SLF", "ARG", "PLR2004", "ANN201"]
"notebooks/**" = ["ALL"]

[tool.ruff.isort]
known-first-party = ["dvb"]
force-single-line = true

[tool.vulture]
exclude = [".eggs", ".git", ".*cache", ".tox"]
make_whitelist = true
min_confidence = 80
sort_by_size = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
